snippets/compact-memberlist.css
.f75fb00fb7356cbe-content > :is(.c8ffbb79449f399c-container, .c8ffbb79449f399c-membersWrap) {
    width: 64px !important;
    min-width: 64px;
    justify-content: flex-start;
}

.f75fb00fb7356cbe-content > :is(.c8ffbb79449f399c-container, .c8ffbb79449f399c-membersWrap) > * {
    width: 265px;
    overflow: visible;
    transition: translate 0.25s ease-out;
}

.f75fb00fb7356cbe-content > :is(.c8ffbb79449f399c-container, .c8ffbb79449f399c-membersWrap) > :hover {
    translate: -201px 0;
}

.f75fb00fb7356cbe-content > .c8ffbb79449f399c-membersWrap > :not(:hover) {
    padding-left: 1px;
}

/* group separator */

.c8ffbb79449f399c-membersGroup {
    transition: color 0.25s ease-out;
}

.c8ffbb79449f399c-membersGroup::before {
    content: "";
    position: absolute;
    width: 24px;
    height: 2px;
    left: 20px;
    margin-top: 10px;
    background-color: var(--channels-default);
    transition: background-color 0.25s ease-out;
}

.f75fb00fb7356cbe-content > :is(.c8ffbb79449f399c-container, .c8ffbb79449f399c-membersWrap) > :not(:hover) .c8ffbb79449f399c-membersGroup {
    color: transparent;
}

.f75fb00fb7356cbe-content > :is(.c8ffbb79449f399c-container, .c8ffbb79449f399c-membersWrap) > :hover .c8ffbb79449f399c-membersGroup::Before {
    background-color: transparent;
}

.c8ffbb79449f399c-membersGroup .ee71ee16cc02184d-roleIcon {
    translate: 8px -8px;
    transition: translate 0.25s ease-out;
}

.f75fb00fb7356cbe-content > :is(.c8ffbb79449f399c-container, .c8ffbb79449f399c-membersWrap) > :hover .c8ffbb79449f399c-membersGroup .ee71ee16cc02184d-roleIcon {
    translate: 0 0;
}

/* member */

._5d473ecff348c314-member ._5d473ecff348c314-memberInner > :not(._91a9d7f7e5248a56-avatar) {
    translate: 8px 0;
    transition: translate 0.25s ease-out;
}

.f75fb00fb7356cbe-content > :is(.c8ffbb79449f399c-container, .c8ffbb79449f399c-membersWrap) > :hover ._5d473ecff348c314-member ._5d473ecff348c314-memberInner > :not(._91a9d7f7e5248a56-avatar) {
    translate: 0 0;
}

._5d473ecff348c314-member ._4bbc6dc06e75ad52-container {
    width: 46px;
}

.f75fb00fb7356cbe-content > :is(.c8ffbb79449f399c-container, .c8ffbb79449f399c-membersWrap) > :hover ._5d473ecff348c314-member ._4bbc6dc06e75ad52-container {
    width: 100%;
}

/* private thread instructions */

._7641b507c6cdbb10-instructions, ._7641b507c6cdbb10-private {
    transition: color 0.25s ease-out;
}

._7641b507c6cdbb10-private > svg {
    color: var(--text-default);
    transition: translate 0.25s ease-out;
    translate: 9px 0;
}

.f75fb00fb7356cbe-content > .c8ffbb79449f399c-membersWrap > :not(:hover) ._7641b507c6cdbb10-divider {
    width: 30px;
}

.f75fb00fb7356cbe-content > .c8ffbb79449f399c-membersWrap > :not(:hover) :is(._7641b507c6cdbb10-instructions, ._7641b507c6cdbb10-private) {
    color: transparent !important;
}

.f75fb00fb7356cbe-content > .c8ffbb79449f399c-membersWrap > :hover ._7641b507c6cdbb10-private > svg {
    translate: 0 0;
}

